// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid token: not formatted 1`] = `
Object {
  "req": Object {
    "headers": Object {
      "Authorization": "Basic QW5keV9CYXJ0ZWxsMTJAZ21haWwuY29taUJabUZGNWtvWElvTWhG",
    },
    "json": Object {
      "displayName": "Demarco",
    },
    "method": "POST",
  },
  "res": Object {
    "data": null,
    "error": Object {
      "details": null,
      "message": "email and password not provided",
      "name": "BadBasicToken",
      "status": 401,
    },
  },
  "url": "/auth/local/register",
}
`;

exports[`invalid token: not provided 1`] = `
Object {
  "req": Object {
    "json": Object {
      "displayName": "Guy",
    },
    "method": "POST",
  },
  "res": Object {
    "data": null,
    "error": Object {
      "details": null,
      "message": "email and password not provided",
      "name": "BadBasicToken",
      "status": 401,
    },
  },
  "url": "/auth/local/register",
}
`;

exports[`success 1`] = `
Object {
  "req": Object {
    "headers": Object {
      "Authorization": "Basic RGVsZmluYS5TY2htaWR0MkB5YWhvby5jb206MTVXbXBybUh0ajBkNjlu",
    },
    "json": Object {
      "displayName": "Major",
    },
    "method": "POST",
  },
  "res": Object {
    "data": Object {
      "__v": 0,
      "_id": Any<String>,
      "createdAt": Any<String>,
      "displayName": Any<String>,
      "email": "Delfina.Schmidt2@yahoo.com",
      "providers": Array [
        "local",
      ],
      "token": Any<String>,
      "updatedAt": Any<String>,
    },
  },
  "url": "/auth/local/register",
}
`;

exports[`success: only required 1`] = `
Object {
  "req": Object {
    "headers": Object {
      "Authorization": "Basic SXNtYWVsLlBvbGxpY2hAZ21haWwuY29tOndmeHBqa0VtUzE4dGZuVQ==",
    },
    "method": "POST",
  },
  "res": Object {
    "data": Object {
      "__v": 0,
      "_id": Any<String>,
      "createdAt": Any<String>,
      "displayName": Any<String>,
      "email": "Ismael.Pollich@gmail.com",
      "providers": Array [
        "local",
      ],
      "token": Any<String>,
      "updatedAt": Any<String>,
    },
  },
  "url": "/auth/local/register",
}
`;

exports[`user exist 1`] = `
Object {
  "req": Object {
    "headers": Object {
      "Authorization": "Basic RGVyaWNrNTdAeWFob28uY29tOkNtQXVzZHRkNkV5cEZ2VA==",
    },
    "method": "POST",
  },
  "res": Object {
    "data": null,
    "error": Object {
      "details": Object {
        "errors": Object {
          "email": "this email is used",
        },
      },
      "message": "User already exist.",
      "name": "UserAlreadyExist",
      "status": 409,
    },
  },
  "url": "/auth/local/register",
}
`;
